[project]
name = "bioinf-project-ii"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=7.2.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.9",
    "pandas>=3.0.2",
    "pytdc>=0.3.6",
    "rdkit>=2026.3.1",
    "seaborn>=0.13.2",
]
